src/tests/InvalidTests/TestAttributes3.agl
cellSize : Number = 200;

Rectangle at (0,cellSize) with {
    length = (50,50);
    state = "super"; # Error. State can only be "hidden" or "normal"
}
